# qq-bot-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml
.cargo-husky/hooks/: pre-commit
docs/: TODO.md
examples/: bad_creds.rs  run_bot.rs
src/: auth.rs  client.rs  intents.rs  lib.rs  pool.rs  prelude.rs
src/error/: auth.rs  client.rs  gateway.rs  http.rs  mod.rs
src/event/: decode.rs  handler.rs  mod.rs
src/gateway/: connection.rs  mod.rs  tests.rs
src/http/: announces.rs  audio.rs  channels.rs  client.rs  dms.rs  forums.rs  guilds.rs  interactions.rs  messages.rs  meta.rs  mod.rs  mutes.rs  permissions.rs  pins.rs  reactions.rs  roles.rs  schedules.rs  tests.rs  users.rs
src/types/: audio.rs  audit.rs  forum.rs  gateway.rs  guild.rs  interaction.rs  keyboard.rs  manage.rs  member.rs  message_delete.rs  mod.rs  reaction.rs  robot.rs  user.rs
src/types/message/: inbound.rs  mod.rs  outgoing.rs
src/types/payloads/: ark.rs  embed.rs  keyboard.rs  markdown.rs  media.rs  mod.rs
